Email activation complete

--- a/users/templates/template_change_password.html
+++ b/users/templates/template_change_password.html
@@ -60,7 +60,7 @@
 		<center style='color:#3d5ca3; font-family:arial, "helvetica neue", helvetica, sans-serif; font-size:14px; font-weight:700; line-height:14px;  mso-text-raise:1px'>Confirm Registration</center>
 	</v:roundrect></a>
 <![endif]-->
-                                                                                        <span class="msohide es-button-border"><a href="{{ protocol }}://{{ domain }}{% url 'activate' uidb64=uid token=token %}">
+                                                                                        <span class="msohide es-button-border"><a href="{{ protocol }}://{{ domain }}{% url 'update' uidb64=uid token=token %}">
                                                                                                                       <button style="background-color: #8BCC00; border: none;border-radius:15px; color: white; height:45px; width:150px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
                                                                                                                                 Confirm Email
                                                                                                                               </button>
